--- a/html/carrito.html
+++ b/html/carrito.html
@@ -276,36 +276,38 @@
         </div>
     </div>
 
-    <!-- ESPECIALS -->
+    <!--=======================================================================================================================================-->
+    <!--ESPECIALS TOURS-->
+    <!--=======================================================================================================================================-->
     <div id="specials" class="container-fluid  py-2" style="background-color: rgba(0%, 0%, 0%, 2%);">
         <div class="container px-0">
 
             <div class="grid-especial">
 
                 <!-- ESPECIAL 1 -->
-                <div class="item-especial panorama" style="background-image: linear-gradient(
+                <div class="item-especial panorama product" id="7" style="background-image: linear-gradient(
                     rgba(0, 0, 0, 0.1),
                     rgba(0, 0, 0, 0.2)
                   ),url(../img/especial1.png);">
 
                     <div class="info-especial p-2">
 
-                        <p class=" m-0 fuente4">Especial 1</p>
+                        <p class=" m-0 fuente4 nombre-tour">Especial 1</p>
 
                         <div class=" d-flex">
                             <i class=" p-1 far fa-clock"></i>
-                            <p class=" fuente4 p-0 m-0 mr-3">1 Day</p>
+                            <p class=" fuente4 p-0 m-0 mr-3"><span class="dias">4</span> Day</p>
                             <i class="p-1 far fa-user"></i>
                             <p class=" fuente4 p-0 m-0">Min. 2 persons</p>
                         </div>
 
                         <div class="d-flex mt-1">
 
-                            <a href="paquete.html"><button type="button" class=" px-2 btn btn-success fuente4  mr-3 mb-2" style="font-size: 20px;">See Tour</button>
+                            <a href="./html/paquete.html"><button type="button" class=" px-2 btn btn-success fuente4  mr-3 mb-2" style="font-size: 20px;">See Tour</button>
                             </a>
                             <div class="d-flex flex-column">
                                 <div class="d-flex">
-                                    <p class="m-0 fuente4">From 400</p>
+                                    <p class="m-0 fuente4">From <span class="price">400</span></p>
                                     <i class="p-1 fas fa-dollar-sign"></i>
                                 </div>
 
@@ -318,7 +320,8 @@
                                 </div>
                             </div>
 
-                            <i class="ml-2 mt-2 fas  fa-plus-circle" style="font-size: 25px;cursor: pointer;color: #ffffff;"></i>
+                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart tiembla" style="font-size: 25px;cursor: pointer;color: #ffffff;"
+                               data-id="7"></i>
 
                         </div>
 
@@ -327,29 +330,29 @@
                 </div>
 
                 <!-- ESPECIAL 2 -->
-                <div class="item-especial panorama" style="background-image: linear-gradient(
+                <div class="item-especial panorama product" id="8" style="background-image: linear-gradient(
                     rgba(0, 0, 0, 0.1),
                     rgba(0, 0, 0, 0.2)
                   ),url(../img/especial2.png);">
 
                     <div class="info-especial p-2">
 
-                        <p class=" m-0 fuente4">Especial 2</p>
+                        <p class=" m-0 fuente4 nombre-tour">Especial 2</p>
 
                         <div class=" d-flex">
                             <i class=" p-1 far fa-clock"></i>
-                            <p class=" fuente4 p-0 m-0 mr-3">1 Day</p>
+                            <p class=" fuente4 p-0 m-0 mr-3"><span class="dias">4</span> Day</p>
                             <i class="p-1 far fa-user"></i>
                             <p class=" fuente4 p-0 m-0">Min. 2 persons</p>
                         </div>
 
                         <div class="d-flex mt-1">
 
-                            <a href="paquete.html"><button type="button" class=" px-2 btn btn-success fuente4  mr-3 mb-2" style="font-size: 20px;">See Tour</button>
+                            <a href="./html/paquete.html"><button type="button" class=" px-2 btn btn-success fuente4  mr-3 mb-2" style="font-size: 20px;">See Tour</button>
                             </a>
                             <div class="d-flex flex-column">
                                 <div class="d-flex">
-                                    <p class="m-0 fuente4">From 400</p>
+                                    <p class="m-0 fuente4">From <span class="price">400</span></p>
                                     <i class="p-1 fas fa-dollar-sign"></i>
                                 </div>
 
@@ -362,7 +365,8 @@
                                 </div>
                             </div>
 
-                            <i class="ml-2 mt-2 fas  fa-plus-circle" style="font-size: 25px;cursor: pointer;color: #ffffff;"></i>
+                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart tiembla" style="font-size: 25px;cursor: pointer;color: #ffffff;"
+                                 data-id="8"></i>
 
                         </div>
 
@@ -371,29 +375,29 @@
                 </div>
 
                 <!-- ESPECIAL 3 -->
-                <div class="item-especial panorama" style="background-image: linear-gradient(
+                <div class="item-especial panorama product" id="9" style="background-image: linear-gradient(
                     rgba(0, 0, 0, 0.1),
                     rgba(0, 0, 0, 0.2)
                   ),url(../img/especial3.png);">
 
                     <div class="info-especial p-2">
 
-                        <p class=" m-0 fuente4">Especial 3</p>
+                        <p class=" m-0 fuente4 nombre-tour">Especial 3</p>
 
                         <div class=" d-flex">
                             <i class=" p-1 far fa-clock"></i>
-                            <p class=" fuente4 p-0 m-0 mr-3">1 Day</p>
+                            <p class=" fuente4 p-0 m-0 mr-3"><span class="dias">4</span> Day</p>
                             <i class="p-1 far fa-user"></i>
                             <p class=" fuente4 p-0 m-0">Min. 2 persons</p>
                         </div>
 
                         <div class="d-flex mt-1">
 
-                            <a href="paquete.html"><button type="button" class=" px-2 btn btn-success fuente4  mr-3 mb-2" style="font-size: 20px;">See Tour</button>
+                            <a href="./html/paquete.html"><button type="button" class=" px-2 btn btn-success fuente4  mr-3 mb-2" style="font-size: 20px;">See Tour</button>
                             </a>
                             <div class="d-flex flex-column">
                                 <div class="d-flex">
-                                    <p class="m-0 fuente4">From 400</p>
+                                    <p class="m-0 fuente4">From <span class="price">400</span></p>
                                     <i class="p-1 fas fa-dollar-sign"></i>
                                 </div>
 
@@ -406,7 +410,8 @@
                                 </div>
                             </div>
 
-                            <i class="ml-2 mt-2 fas  fa-plus-circle" style="font-size: 25px;cursor: pointer;color: #ffffff;"></i>
+                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart tiembla" style="font-size: 25px;cursor: pointer;color: #ffffff;"
+                               data-id="9"></i>
 
                         </div>
 
@@ -415,29 +420,29 @@
                 </div>
 
                 <!-- ESPECIAL 4 -->
-                <div class="item-especial panorama" style="background-image: linear-gradient(
+                <div class="item-especial panorama product" id="10" style="background-image: linear-gradient(
                     rgba(0, 0, 0, 0.1),
                     rgba(0, 0, 0, 0.2)
                   ),url(../img/especial4.png);">
 
                     <div class="info-especial p-2">
 
-                        <p class=" m-0 fuente4">Especial 4</p>
+                        <p class=" m-0 fuente4 nombre-tour">Especial 4</p>
 
                         <div class=" d-flex">
                             <i class=" p-1 far fa-clock"></i>
-                            <p class=" fuente4 p-0 m-0 mr-3">1 Day</p>
+                            <p class=" fuente4 p-0 m-0 mr-3"><span class="dias">4</span> Day</p>
                             <i class="p-1 far fa-user"></i>
                             <p class=" fuente4 p-0 m-0">Min. 2 persons</p>
                         </div>
 
                         <div class="d-flex mt-1">
 
-                            <a href="paquete.html"><button type="button" class=" px-2 btn btn-success fuente4  mr-3 mb-2" style="font-size: 20px;">See Tour</button>
+                            <a href="./html/paquete.html"><button type="button" class=" px-2 btn btn-success fuente4  mr-3 mb-2" style="font-size: 20px;">See Tour</button>
                             </a>
                             <div class="d-flex flex-column">
                                 <div class="d-flex">
-                                    <p class="m-0 fuente4">From 400</p>
+                                    <p class="m-0 fuente4">From <span class="price">400</span></p>
                                     <i class="p-1 fas fa-dollar-sign"></i>
                                 </div>
 
@@ -450,7 +455,8 @@
                                 </div>
                             </div>
 
-                            <i class="ml-2 mt-2 fas  fa-plus-circle" style="font-size: 25px;cursor: pointer;color: #ffffff;"></i>
+                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart tiembla" style="font-size: 25px;cursor: pointer;color: #ffffff;"
+                                data-id="10"></i>
 
                         </div>
 
@@ -459,29 +465,29 @@
                 </div>
 
                 <!-- ESPECIAL 5 -->
-                <div class="item-especial panorama" style="background-image: linear-gradient(
+                <div class="item-especial panorama product" id="11" style="background-image: linear-gradient(
                     rgba(0, 0, 0, 0.1),
                     rgba(0, 0, 0, 0.2)
                   ),url(../img/especial5.png);">
 
                     <div class="info-especial p-2">
 
-                        <p class=" m-0 fuente4">Especial 5</p>
+                        <p class=" m-0 fuente4 nombre-tour">Especial 5</p>
 
                         <div class=" d-flex">
                             <i class=" p-1 far fa-clock"></i>
-                            <p class=" fuente4 p-0 m-0 mr-3">1 Day</p>
+                            <p class=" fuente4 p-0 m-0 mr-3"><span class="dias">4</span> Day</p>
                             <i class="p-1 far fa-user"></i>
                             <p class=" fuente4 p-0 m-0">Min. 2 persons</p>
                         </div>
 
                         <div class="d-flex mt-1">
 
-                            <a href="paquete.html"><button type="button" class=" px-2 btn btn-success fuente4  mr-3 mb-2" style="font-size: 20px;">See Tour</button>
+                            <a href="./html/paquete.html"><button type="button" class=" px-2 btn btn-success fuente4  mr-3 mb-2" style="font-size: 20px;">See Tour</button>
                             </a>
                             <div class="d-flex flex-column">
                                 <div class="d-flex">
-                                    <p class="m-0 fuente4">From 400</p>
+                                    <p class="m-0 fuente4">From <span class="price">400</span></p>
                                     <i class="p-1 fas fa-dollar-sign"></i>
                                 </div>
 
@@ -494,7 +500,8 @@
                                 </div>
                             </div>
 
-                            <i class="ml-2 mt-2 fas  fa-plus-circle" style="font-size: 25px;cursor: pointer;color: #ffffff;"></i>
+                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart tiembla" style="font-size: 25px;cursor: pointer;color: #ffffff;"
+                                 data-id="11"></i>
 
                         </div>
 
@@ -503,29 +510,29 @@
                 </div>
 
                 <!-- ESPECIAL 6 -->
-                <div class="item-especial panorama" style="background-image: linear-gradient(
+                <div class="item-especial panorama product" id="12" style="background-image: linear-gradient(
                     rgba(0, 0, 0, 0.1),
                     rgba(0, 0, 0, 0.2)
                   ),url(../img/especial6.png);">
 
                     <div class="info-especial p-2">
 
-                        <p class=" m-0 fuente4">Especial 6</p>
+                        <p class=" m-0 fuente4 nombre-tour">Especial 6</p>
 
                         <div class=" d-flex">
                             <i class=" p-1 far fa-clock"></i>
-                            <p class=" fuente4 p-0 m-0 mr-3">1 Day</p>
+                            <p class=" fuente4 p-0 m-0 mr-3"><span class="dias">4</span> Day</p>
                             <i class="p-1 far fa-user"></i>
                             <p class=" fuente4 p-0 m-0">Min. 2 persons</p>
                         </div>
 
                         <div class="d-flex mt-1">
 
-                            <a href="paquete.html"><button type="button" class=" px-2 btn btn-success fuente4  mr-3 mb-2" style="font-size: 20px;">See Tour</button>
+                            <a href="./html/paquete.html"><button type="button" class=" px-2 btn btn-success fuente4  mr-3 mb-2" style="font-size: 20px;">See Tour</button>
                             </a>
                             <div class="d-flex flex-column">
                                 <div class="d-flex">
-                                    <p class="m-0 fuente4">From 400</p>
+                                    <p class="m-0 fuente4">From <span class="price">400</span></p>
                                     <i class="p-1 fas fa-dollar-sign"></i>
                                 </div>
 
@@ -538,7 +545,8 @@
                                 </div>
                             </div>
 
-                            <i class="ml-2 mt-2 fas  fa-plus-circle" style="font-size: 25px;cursor: pointer;color: #ffffff;"></i>
+                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart tiembla" style="font-size: 25px;cursor: pointer;color: #ffffff;"
+                                 data-id="12"></i>
 
                         </div>
 
@@ -547,29 +555,29 @@
                 </div>
 
                 <!-- ESPECIAL 7 -->
-                <div class="item-especial panorama" style="background-image: linear-gradient(
+                <div class="item-especial panorama product" id="13" style="background-image: linear-gradient(
                     rgba(0, 0, 0, 0.1),
                     rgba(0, 0, 0, 0.2)
                   ),url(../img/especial7.png);">
 
                     <div class="info-especial p-2">
 
-                        <p class=" m-0 fuente4">Especial 7</p>
+                        <p class=" m-0 fuente4 nombre-tour">Especial 7</p>
 
                         <div class=" d-flex">
                             <i class=" p-1 far fa-clock"></i>
-                            <p class=" fuente4 p-0 m-0 mr-3">1 Day</p>
+                            <p class=" fuente4 p-0 m-0 mr-3"><span class="dias">4</span> Day</p>
                             <i class="p-1 far fa-user"></i>
                             <p class=" fuente4 p-0 m-0">Min. 2 persons</p>
                         </div>
 
                         <div class="d-flex mt-1">
 
-                            <a href="paquete.html"><button type="button" class=" px-2 btn btn-success fuente4  mr-3 mb-2" style="font-size: 20px;">See Tour</button>
+                            <a href="./html/paquete.html"><button type="button" class=" px-2 btn btn-success fuente4  mr-3 mb-2" style="font-size: 20px;">See Tour</button>
                             </a>
                             <div class="d-flex flex-column">
                                 <div class="d-flex">
-                                    <p class="m-0 fuente4">From 400</p>
+                                    <p class="m-0 fuente4">From <span class="price">400</span></p>
                                     <i class="p-1 fas fa-dollar-sign"></i>
                                 </div>
 
@@ -582,7 +590,8 @@
                                 </div>
                             </div>
 
-                            <i class="ml-2 mt-2 fas  fa-plus-circle" style="font-size: 25px;cursor: pointer;color: #ffffff;"></i>
+                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart tiembla" style="font-size: 25px;cursor: pointer;color: #ffffff;"
+                                data-id="13"></i>
 
                         </div>
 
@@ -591,29 +600,29 @@
                 </div>
 
                 <!-- ESPECIAL 8 -->
-                <div class="item-especial panorama" style="background-image: linear-gradient(
+                <div class="item-especial panorama product" id="14" style="background-image: linear-gradient(
                     rgba(0, 0, 0, 0.1),
                     rgba(0, 0, 0, 0.2)
                   ),url(../img/especial8.png);">
 
                     <div class="info-especial p-2">
 
-                        <p class=" m-0 fuente4">Especial 8</p>
+                        <p class=" m-0 fuente4 nombre-tour">Especial 8</p>
 
                         <div class=" d-flex">
                             <i class=" p-1 far fa-clock"></i>
-                            <p class=" fuente4 p-0 m-0 mr-3">1 Day</p>
+                            <p class=" fuente4 p-0 m-0 mr-3"><span class="dias">4</span> Day</p>
                             <i class="p-1 far fa-user"></i>
                             <p class=" fuente4 p-0 m-0">Min. 2 persons</p>
                         </div>
 
                         <div class="d-flex mt-1">
 
-                            <a href="paquete.html"><button type="button" class=" px-2 btn btn-success fuente4  mr-3 mb-2" style="font-size: 20px;">See Tour</button>
+                            <a href="./html/paquete.html"><button type="button" class=" px-2 btn btn-success fuente4  mr-3 mb-2" style="font-size: 20px;">See Tour</button>
                             </a>
                             <div class="d-flex flex-column">
                                 <div class="d-flex">
-                                    <p class="m-0 fuente4">From 400</p>
+                                    <p class="m-0 fuente4">From <span class="price">400</span></p>
                                     <i class="p-1 fas fa-dollar-sign"></i>
                                 </div>
 
@@ -626,7 +635,8 @@
                                 </div>
                             </div>
 
-                            <i class="ml-2 mt-2 fas  fa-plus-circle" style="font-size: 25px;cursor: pointer;color: #ffffff;"></i>
+                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart tiembla" style="font-size: 25px;cursor: pointer;color: #ffffff;"
+                                 data-id="14"></i>
 
                         </div>
 
