--- a/index.html
+++ b/index.html
@@ -392,8 +392,8 @@
                                     </div>
                                 </div>
 
-                                <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart" style="font-size: 25px;cursor: pointer;color: #ffffff;"
-                                onclick="addToCart('1')" data-id="1"></i>
+                                <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart tiembla" style="font-size: 25px;cursor: pointer;color: #ffffff;"
+                                 data-id="1"></i>
 
                             </div>
 
@@ -437,8 +437,8 @@
                                     </div>
                                 </div>
 
-                                <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart" style="font-size: 25px;cursor: pointer;color: #ffffff;"
-                                onclick="addToCart('2')" data-id="2"></i>
+                                <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart tiembla" style="font-size: 25px;cursor: pointer;color: #ffffff;"
+                                 data-id="2"></i>
 
                             </div>
 
@@ -486,8 +486,8 @@
                                     </div>
                                 </div>
 
-                                <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart" style="font-size: 25px;cursor: pointer;color: #ffffff;"
-                                onclick="addToCart('3')" data-id="3"></i>
+                                <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart tiembla" style="font-size: 25px;cursor: pointer;color: #ffffff;"
+                                 data-id="3"></i>
 
                             </div>
 
@@ -531,8 +531,8 @@
                                     </div>
                                 </div>
 
-                                <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart" style="font-size: 25px;cursor: pointer;color: #ffffff;"
-                                onclick="addToCart('4')" data-id="4"></i>
+                                <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart tiembla" style="font-size: 25px;cursor: pointer;color: #ffffff;"
+                                 data-id="4"></i>
 
                             </div>
 
@@ -583,8 +583,8 @@
                                 </div>
                             </div>
 
-                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart" style="font-size: 25px;cursor: pointer;color: #ffffff;"
-                                onclick="addToCart('5')" data-id="5"></i>
+                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart tiembla" style="font-size: 25px;cursor: pointer;color: #ffffff;"
+                                 data-id="5"></i>
 
                         </div>
 
@@ -628,8 +628,8 @@
                                 </div>
                             </div>
 
-                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart" style="font-size: 25px;cursor: pointer;color: #ffffff;"
-                                onclick="addToCart('6')" data-id="6"></i>
+                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart tiembla" style="font-size: 25px;cursor: pointer;color: #ffffff;"
+                                 data-id="6"></i>
 
                         </div>
 
@@ -694,8 +694,8 @@
                                 </div>
                             </div>
 
-                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart" style="font-size: 25px;cursor: pointer;color: #ffffff;"
-                                onclick="addToCart('7')" data-id="7"></i>
+                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart tiembla" style="font-size: 25px;cursor: pointer;color: #ffffff;"
+                               data-id="7"></i>
 
                         </div>
 
@@ -739,8 +739,8 @@
                                 </div>
                             </div>
 
-                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart" style="font-size: 25px;cursor: pointer;color: #ffffff;"
-                                onclick="addToCart('8')" data-id="8"></i>
+                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart tiembla" style="font-size: 25px;cursor: pointer;color: #ffffff;"
+                                 data-id="8"></i>
 
                         </div>
 
@@ -784,8 +784,8 @@
                                 </div>
                             </div>
 
-                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart" style="font-size: 25px;cursor: pointer;color: #ffffff;"
-                                onclick="addToCart('9')" data-id="9"></i>
+                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart tiembla" style="font-size: 25px;cursor: pointer;color: #ffffff;"
+                               data-id="9"></i>
 
                         </div>
 
@@ -829,8 +829,8 @@
                                 </div>
                             </div>
 
-                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart" style="font-size: 25px;cursor: pointer;color: #ffffff;"
-                                onclick="addToCart('10')" data-id="10"></i>
+                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart tiembla" style="font-size: 25px;cursor: pointer;color: #ffffff;"
+                                data-id="10"></i>
 
                         </div>
 
@@ -874,8 +874,8 @@
                                 </div>
                             </div>
 
-                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart" style="font-size: 25px;cursor: pointer;color: #ffffff;"
-                                onclick="addToCart('11')" data-id="11"></i>
+                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart tiembla" style="font-size: 25px;cursor: pointer;color: #ffffff;"
+                                 data-id="11"></i>
 
                         </div>
 
@@ -919,8 +919,8 @@
                                 </div>
                             </div>
 
-                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart" style="font-size: 25px;cursor: pointer;color: #ffffff;"
-                                onclick="addToCart('12')" data-id="12"></i>
+                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart tiembla" style="font-size: 25px;cursor: pointer;color: #ffffff;"
+                                 data-id="12"></i>
 
                         </div>
 
@@ -964,8 +964,8 @@
                                 </div>
                             </div>
 
-                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart" style="font-size: 25px;cursor: pointer;color: #ffffff;"
-                                onclick="addToCart('13')" data-id="13"></i>
+                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart tiembla" style="font-size: 25px;cursor: pointer;color: #ffffff;"
+                                data-id="13"></i>
 
                         </div>
 
@@ -1009,8 +1009,8 @@
                                 </div>
                             </div>
 
-                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart" style="font-size: 25px;cursor: pointer;color: #ffffff;"
-                                onclick="addToCart('14')" data-id="14"></i>
+                            <i class="ml-2 mt-2 fa-sharp fa-solid fa-plus add-to-cart tiembla" style="font-size: 25px;cursor: pointer;color: #ffffff;"
+                                 data-id="14"></i>
 
                         </div>
 
