--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
     <!-- ZONA DE MISTERIO -->
     <div class="pt-1 ancla-top" style="height: 95px;position: relative;">
         <div class="px-3 d-flex" style="width: 320px;position: absolute;left: 50%;transform: translate(-50%,0%);">
-            <p class="m-0 ml-3 fuente2 pt-2 text-center" style="font-size: 35px;line-height: 1;">Gaaaaaaa</p>
+            <p class="m-0 ml-3 fuente2 pt-2 text-center" style="font-size: 35px;line-height: 1;">Un lugar mágico y fantástico</p>
         </div>
     </div>
 
